<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/board">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_input_target_device_address"
            android:textSize="20sp"
            android:background="@drawable/board"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/bdaddr_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/xx_xx_xx_xx_xx_xx"
                android:text="@string/_00_0b_57_1c_fa_43"/>
            <Button
                android:id="@+id/scan_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAllCaps="false"
                android:text="Scan"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/board">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/file_format"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/file_format_group"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="10dp">
                <RadioButton
                    android:id="@+id/gbl_select"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gbl"/>
                <RadioButton
                    android:id="@+id/ebl_select"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ebl"/>
            </RadioGroup>
        </LinearLayout>
</LinearLayout>